--- a/css/style.css
+++ b/css/style.css
@@ -10,21 +10,53 @@
 }
 
 
-.center{
+body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #757575;
     background-image: linear-gradient(to right, #193624, #000000);
-    width: auto;
-    height: 84.8vh;
-    padding: 30px;
+    height: 100%;
     
 }
+.nextpage {
+	text-align: center;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-family: monospace;
+    font-size: 30px;
+    
 
+}
+#optionsbutton{
+	font-family: monospace;
+	display : inline-block;
+	line-height : 30px;
+	background-color : transparent;
+	color : rgb(255, 255, 255);
+	text-decoration : none;
+	font-weight : 300;
+	font-size : 15px;
+	padding : 0 20px;
+	border-radius : 30px;
+	border : solid 1px rgb(255, 255, 255) ;
+	transition : .3s;
+    text-align: center;
+    margin-left: 50px;;
+    margin-right: 50px;
+}
 .Logo{
     padding: 26px;
 }
-
-
+#noinfo{
+    color: #f2f2f2;
+    font-size: 110%;
+}
+.historyitem{
+    font-size: 150%;
+    width: 20%;
+    padding-bottom: 10px;
+    border: solid black 4px;
+    background-color: white;
+}
 .otext{
     color: #FE4E02;
 }
