--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ body{
 	border : solid 1px rgb(255, 255, 255) ;
 	transition : .3s;
     text-align: center;
-    margin-left: 50px;;
-    margin-right: 50px;
+    margin-left: 10px;;
+    margin-right: 10px;
 }
 .Logo{
     padding: 26px;
@@ -50,13 +50,8 @@ body{
     color: #f2f2f2;
     font-size: 110%;
 }
-.historyitem{
-    font-size: 150%;
-    width: 20%;
-    padding-bottom: 10px;
-    border: solid black 4px;
-    background-color: white;
-}
+
+
 .otext{
     color: #FE4E02;
 }
@@ -195,7 +190,7 @@ nav .icon-burger .line {
         width: auto;
         height: auto;
         flex-direction: column;
-        background-color: rgba(0,0,0,.8);
+        background-color: rgba(255, 255, 255, 0.8);
         overflow: hidden;
         transition: all .5s ease-in-out;
 
@@ -260,3 +255,31 @@ nav .icon-burger .line {
   to {opacity: 1}
 }
 
+
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+  }
+  
+  .alert.success {background-color: #04AA6D;}
+  .alert.info {background-color: #2196F3;}
+  .alert.warning {background-color: #ff9800;}
+  
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+    color: black;
+  }
