--- a/css/style4.css
+++ b/css/style4.css
@@ -28,7 +28,7 @@ body {
   position: relative;
   margin: 5% auto;
   width: 450px;
-  height: 450px;
+  height: 42rem;
   background: #FFF;
   border-radius: 2px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
