--- a/css/style4.css
+++ b/css/style4.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(to right, #193624, #000000);
+  background-image: linear-gradient(to right, #7d7f7e, #e6e6e6);
   height: 100%;
   font-size: 16px;
   color: #222;
