--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #757575;
-    background-image: linear-gradient(to right, #193624, #000000);
+    background-image: linear-gradient(to right, #7d7f7e, #e6e6e6);
     height: 100%;
     
 }
